--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,10 +1,12 @@
 <nav class="navbar navbar-expand-lg bg-body-secondary">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ path('index') }}">
-            <img src="{{ asset('image/logo/logo_small_icon_only-removebg.png') }}" alt="Logo" width="40" height="34" class="d-inline-block align-text-top">
+            <img src="{{ asset('image/logo/logo_small_icon_only-removebg.png') }}" alt="Logo" width="40" height="34"
+                 class="d-inline-block align-text-top">
             Deine-Abos
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -12,25 +14,43 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{{ path('index') }}">Home</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Abos
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{{ path('listSubscriptions') }}">Abo übersicht</a></li>
-                        <li><a class="dropdown-item" href="{{ path('newSubscription') }}">Abo hinzufügen</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Kategorien
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{{ path('listCategories') }}">Kategorie übersicht</a></li>
-                        <li><a class="dropdown-item" href="{{ path('newCategory') }}">Kategorie hinzufügen</a></li>
-                    </ul>
-                </li>
-
+                {% if app.user is empty %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_login') }}">Login</a>
+                    </li>
+                {% endif %}
+                {% if app.user %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Abos
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{{ path('listSubscriptions') }}">Abo übersicht</a></li>
+                            <li><a class="dropdown-item" href="{{ path('newSubscription') }}">Abo hinzufügen</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Kategorien
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{{ path('listCategories') }}">Kategorie übersicht</a>
+                            </li>
+                            <li><a class="dropdown-item" href="{{ path('newCategory') }}">Kategorie hinzufügen</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            logged in as {{ app.user.userIdentifier }}
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{{ path('app_logout') }}">Logout</a></li>
+                        </ul>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
