--- a/templates/subscription/list.html.twig
+++ b/templates/subscription/list.html.twig
@@ -1,7 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Deine Subscriptions</h2>
+
+    {% if app.user %}
+        <div class="mb-3">
+            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+        </div>
+    {% endif %}
+    <h2>{% if app.user %}{{ app.user.userIdentifier }} {%endif %} Deine Subscriptions</h2>
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         {% for subscription in subscriptions %}
             {% include 'subscription/includes/subscription_detail.html.twig' %}
