--- a/templates/category/list.html.twig
+++ b/templates/category/list.html.twig
@@ -2,12 +2,7 @@
 
 {% block body %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-    <h2>Kategorien - {{ app.user }}</h2>
+    <h2>Kategorien</h2>
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         {% for category in categories %}
             {% include 'category/includes/category_detail.html.twig' %}
